# qt_grpc_integration_test

./: CMakeLists.txt
proto/: CMakeLists.txt  test.proto
src/: CMakeLists.txt  main.qml
src/client/: clientworker.cpp  clientworker.h  main.cpp  testclient.cpp  testclient.h
src/server/: main.cpp  testserver.cpp  testserver.h
